# robotdreams_home_work

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  example_env  pyproject.toml  start.sh
src/: config.py  main.py
src/db/: README.md  home_task_queries.sql
src/file_storage/raw/sales/: README.md
src/file_storage/stg/: README.md
src/flask_app/: create_app.py  form.py  routers.py
src/flask_app/routes/: admin_routers.py  api_routes.py  routers.py
src/flask_app/static/js/: index.js
src/flask_app/templates/: base.html  index.html
src/logs/: README.md
src/services/jobs/job1/: ex_data.py  fake_api_tool.py  save_sales.py
src/services/jobs/job_1_and_2/: fake_api_tool.py  save_sales.py
src/services/jobs/job_1_and_2/schemas/: sales_schema.avsc
src/services/loggers/: py_logger.py  time_formatter.py
tests/: README.md  conftest.py  test_admin_routes.py  test_api_routes.py  test_fake_api_tool.py  test_flask_app.py  test_forms.py  test_routes.py  test_save_sales.py
