[project]
name = "robotdreams-home-work"
version = "0.1.0"
description = "home work for robotdreams"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.10.0",
    "fastavro>=1.12.1",
    "flask>=3.1.2",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "black>=25.9.0",
    "isort>=7.0.0",
    "ruff>=0.14.3",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
